--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <div class="welcome-section text-center my-5">
+        <!-- Logo ve Header -->
+        <header class="text-center py-4">
+            <img src="logo.png" alt="Lahmacun Sarayı Logo" class="logo mb-3">
+            <div class="address-bar">
+                <i class="fas fa-map-marker-alt"></i>
+                <span>Pınarbaşı mah. 730. sok. No:15 Konyaaltı/ANTALYA</span>
+            </div>
+        </header>
+
+        <div class="welcome-section text-center my-4">
             <h1 class="display-4 mb-4">HOŞ GELDİNİZ</h1>
             <div class="location-buttons">
                 <button class="btn btn-primary btn-lg mb-3" onclick="selectLocation('inStore')">Şuan Saray Lahmacundayım</button>
@@ -47,6 +58,24 @@
             <div id="cartItems"></div>
             <div id="cartTotal"></div>
             <button class="btn btn-success" onclick="sendToWhatsapp()">WhatsApp ile Sipariş Ver</button>
+        </div>
+
+        <!-- Harita Bölümü -->
+        <div class="map-section mt-5">
+            <h2 class="text-center mb-4">Bizi Ziyaret Edin</h2>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/d/embed?mid=1_PtDN0Rxt7Tkcn1a_oRMmIbLwTpIcPA&ehbc=2E312F&noprof=1" 
+                        width="100%" 
+                        height="450" 
+                        style="border:0;" 
+                        allowfullscreen="" 
+                        loading="lazy">
+                </iframe>
+            </div>
+            <div class="contact-info text-center mt-4">
+                <p><i class="fas fa-map-marker-alt"></i> Pınarbaşı mah. 730. sok. No:15 Konyaaltı/ANTALYA</p>
+                <p><i class="fas fa-phone"></i> Sipariş için WhatsApp: <a href="tel:+905404630707">0540 463 07 07</a></p>
+            </div>
         </div>
     </div>
 
