--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="discountCode" class="form-label">İndirim Kodu</label>
-                    <input type="text" class="form-control" id="discountCode">
+                    <input type="text" class="form-control" id="discountCode" oninput="updateCart()">
                 </div>
             </form>
         </div>
